--- a/pom.xml
+++ b/pom.xml
@@ -16,9 +16,33 @@
         <version>2.0.9.RELEASE</version>
     </parent>
 
+    <scm>
+        <url>https://github.com/luomu32/quartz-spring-boot-starter</url>
+        <connection>scm:git:ssh://github.com:luomu32/quartz-spring-boot-starter.git</connection>
+        <developerConnection>scm:git:ssh://git@github.com:luomu32/quartz-spring-boot-starter.git</developerConnection>
+    </scm>
+    <issueManagement>
+        <system>GitHub Issue Management</system>
+        <url>https://github.com/luomu32/quartz-spring-boot-starter/issues</url>
+    </issueManagement>
+    <developers>
+        <developer>
+            <name>ray</name>
+            <email>luomu32@hotmail.com</email>
+        </developer>
+    </developers>
+    <licenses>
+        <license>
+            <name>Apache License</name>
+            <url>http://www.apache.org/licenses/</url>
+        </license>
+    </licenses>
+
+
     <properties>
         <maven.compiler.source>1.6</maven.compiler.source>
         <maven.compiler.target>1.6</maven.compiler.target>
+        <quartz.version>2.0.0</quartz.version>
     </properties>
 
     <dependencies>
@@ -41,7 +65,7 @@
         <dependency>
             <groupId>org.quartz-scheduler</groupId>
             <artifactId>quartz</artifactId>
-            <version>2.0.0</version>
+            <version>${quartz.version}</version>
             <scope>provided</scope>
         </dependency>
 
@@ -62,6 +86,18 @@
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <executions>
                     <execution>
@@ -72,6 +108,30 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-gpg-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>sign-artifacts</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>sign</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
+
+    <distributionManagement>
+        <snapshotRepository>
+            <id>sonatype-oss</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+        </snapshotRepository>
+        <repository>
+            <id>sonatype-oss</id>
+            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
+        </repository>
+    </distributionManagement>
 </project>
